--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,16 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>My Blog</title>
+    <link rel="stylesheet" href="styles.css" />
+    <title>Hello World</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body class="page">
+    <div id="root" class="container">
+      <!-- <div class="desktop-image title">
+        <p class="hello-world">Hello World</p>
+        <p class="sophie">I'm Sophie</p> -->
+        <!-- <div id="root"></div> -->
+      </div>
+    </div>
   </body>
 </html>
